--- a/Exploring_Hacker_news.ipynb
+++ b/Exploring_Hacker_news.ipynb
@@ -6,7 +6,7 @@
     "collapsed": true
    },
    "source": [
-    "# Most liked/commented post in Hacker News website.\n",
+    "# Exploring the trend in liked/commented post in Hacker News website.\n",
     "\n",
     "### This project is all about to get an idea that what are those kind of posts which are above then average in number of comments.\n",
     "\n",
